...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanActivity">

    <ImageButton
        android:id="@+id/plan_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="Back"
        android:background="@mipmap/back"
...
        android:text="Clear"
        android:textColor="@drawable/button_text_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/plan_back_button" />

    <Button
        android:id="@+id/Start_Plan_button"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="Start Plan"
        android:textColor="@drawable/button_text"
        app:layout_constraintEnd_toEndOf="@+id/clear_button"
        app:layout_constraintStart_toStartOf="@+id/plan_add_button"
        app:layout_constraintTop_toBottomOf="@+id/clear_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/plan_exhibit_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="@id/items"
...
