...
		android:layout_marginStart="8dp"
		android:layout_marginTop="4dp"
		android:layout_marginEnd="8dp"
		android:scrollbars="vertical"
		android:scrollbarSize="5dp"
		android:fadeScrollbars="false"
		app:layout_constraintBottom_toTopOf="@+id/mockBtn"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/planLabel" />

	<LinearLayout
...
	</LinearLayout>

	<Button
		android:id="@+id/mockBtn"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:text="Mock"
		app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
