<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/search_layout">

    <TextView
        android:id="@+id/results_exhibit_card_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:text="Exhibit"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/results_exhibit_card_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="No Location Available"
        app:layout_constraintStart_toStartOf="@+id/results_exhibit_card_name"
        app:layout_constraintTop_toBottomOf="@+id/results_exhibit_card_name" />

    <TextView
        android:id="@+id/results_exhibit_card_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="(No Distance Available)"
        app:layout_constraintStart_toEndOf="@+id/results_exhibit_card_location"
        app:layout_constraintTop_toTopOf="@+id/results_exhibit_card_name" />
</androidx.constraintlayout.widget.ConstraintLayout>